--- a/learning-server/src/main/resources/application.properties
+++ b/learning-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#\u505A\u591A\u73AF\u5883\u7684\u914D\u7F6E\u529F\u80FD\u65F6\uFF0Capplication.properties\u5FC5\u987B\u8981\u6709\uFF0C\u5FC5\u987B\u5728\u5B83\u8FD9\u91CC\u6307\u5B9Aspring.profiles.active\uFF0C\u6765\u6FC0\u6D3B\u5BF9\u5E94\u7684\u914D\u7F6E\u6587\u4EF6
+#做多环境的配置功能时，application.properties必须要有，必须在它这里指定spring.profiles.active，来激活对应的配置文件
 spring.profiles.active=test
 server.port=8888
 
