--- a/learning-server/src/main/resources/application.properties
+++ b/learning-server/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.profiles.active=test
 server.port=8888
 
+#如果想让用 mybatis-spring-boot-starter去自动配置mybatis的SqlSessionFactory，则需要在这里写SqlSessionFactory被自动配置时需要的属性
+#mybatis.mapper-locations=classpath:mappers/*.xml
