--- a/learning-server/src/main/resources/application.properties
+++ b/learning-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-#做多环境的配置功能时，application.properties必须要有，必须在它这里指定spring.profiles.active，来激活对应的配置文件
+#åå¤ç¯å¢çéç½®åè½æ¶ï¼application.propertieså¿é¡»è¦æï¼å¿é¡»å¨å®è¿éæå®spring.profiles.activeï¼æ¥æ¿æ´»å¯¹åºçéç½®æä»¶
 spring.profiles.active=test
 server.port=8888
 
-#如果想让用 mybatis-spring-boot-starter去自动配置mybatis的SqlSessionFactory，则需要在这里写SqlSessionFactory被自动配置时需要的属性
+#å¦ææ³è®©ç¨ mybatis-spring-boot-starterå»èªå¨éç½®mybatisçSqlSessionFactoryï¼åéè¦å¨è¿éåSqlSessionFactoryè¢«èªå¨éç½®æ¶éè¦çå±æ§
 #mybatis.mapper-locations=classpath:mappers/*.xml
+
+#默认不允许有循环依赖，这里设置为允许
+spring.main.allow-circular-references = true
