--- a/learning-server/pom.xml
+++ b/learning-server/pom.xml
@@ -68,6 +68,13 @@
             <version>1.2.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
+
         <!--查看对象头信息-->
         <dependency>
             <groupId>org.openjdk.jol</groupId>
@@ -136,6 +143,13 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.3.13</version>
+        </dependency>
+
 
     </dependencies>
 
